--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  p Get a short link by going to
+    i http://ls-jl.herokuapp.com/www.YOURLINKHERE.END
